--- a/tools/go-agent/config/agent.default.yaml
+++ b/tools/go-agent/config/agent.default.yaml
@@ -30,8 +30,8 @@ agent:
 
 reporter:
   kafka:
-      brokers: ${SW_REPORTER_KAFKA_BROKERS:127.0.0.1:9092}
-      topic: ${SW_REPORTER_KAFKA_TOPIC:zipkin}
+      brokers: ${SW_AGENT_REPORTER_KAFKA_BROKERS:127.0.0.1:9092}
+      topic: ${SW_AGENT_REPORTER_KAFKA_TOPIC:sw_span}
   # grpc:
   #   # The gRPC server address of the backend service.
   #   backend_service: ${SW_AGENT_REPORTER_GRPC_BACKEND_SERVICE:127.0.0.1:11800}
@@ -68,12 +68,12 @@ log:
   type: ${SW_AGENT_LOG_TYPE:auto}
   tracing:
     # Whether to automatically integrate Tracing information into the logs.
-    enable: ${SW_AGENT_LOG_TRACING_ENABLE:true}
+    enable: ${SW_AGENT_LOG_TRACING_ENABLE:false}
     # If tracing information is enabled, the tracing information would be stored in the current Key in each log.
     key: ${SW_AGENT_LOG_TRACING_KEY:SW_CTX}
   reporter:
     # Whether to upload logs to the backend.
-    enable: ${SW_AGENT_LOG_REPORTER_ENABLE:true}
+    enable: ${SW_AGENT_LOG_REPORTER_ENABLE:false}
     # The fields name list that needs to added to the label of the log.(multiple split by ",")
     label_keys: ${SW_AGENT_LOG_REPORTER_LABEL_KEYS:}
 
